--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,9 @@ DB_PORT=5432
 DB_USER=postgres
 DB_PASS=postgres
 DB_NAME=my_db
+
+TEST_DB_HOST=localhost
+TEST_DB_PORT=5432
+TEST_DB_USER=postgres
+TEST_DB_PASS=postgres
+TEST_DB_NAME=my_test_db
