--- a/.test.env.example
+++ b/.test.env.example
@@ -1,11 +1,11 @@
-DB_HOST=db
-DB_PORT=5432
+DB_HOST=db_test
+DB_PORT=5433
 DB_USER=postgres
 DB_PASS=postgres
-DB_NAME=my_db
+DB_NAME=my_test_db
 
-POSTGRES_DB=my_db
+POSTGRES_DB=library_test_db
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 
-MODE=DEV
+MODE=TEST
