--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,5 @@ asyncio_mode = auto
 asyncio_default_fixture_loop_scope = session
 filterwarnings  =
     ignore:.*event_loop fixture provided by pytest-asyncio has been redefined.*:DeprecationWarning
+env_files =
+    .test.env
